fix alignment of footer

--- a/css/theme.css
+++ b/css/theme.css
@@ -61,18 +61,20 @@
  */
 
 html {
-  height: 100%;
   font-size: 62.5%;
 }
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  min-height: 100vh;
   color: var(--color-text);
   font-family: var(--font-family-sans-serif);
   font-size: 1.8em; /* Currently ems cause chrome bug misinterpreting rems on body element */
   font-weight: 400;
   line-height: 2.5rem;
+}
+main {
+  flex: 1;
 }
 
 /* Typography
